fix(pom): remove double dash inside xml comment